src/objects/Portal_Referral__c.object
<CustomObject>
    <description>Referrals from the Partner Program website</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Referrals</relationshipLabel>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Route__c</fullName>
        <label>Carrier Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City for referral</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Portal Referrals</relationshipLabel>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Program__c</fullName>
        <label>Community Program</label>
        <picklist>
            <picklistValues>
                <fullName>Solarize Bridgeport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord Solar Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Frederick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Newtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pikesville Solar Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Glastonbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Stamford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Cheshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Needham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize  Lexington-Bedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Andover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellesley Power to Choose Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Westport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Windham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Torrington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPN College Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairfield Energy Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Tompkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Huntington</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Location__c</fullName>
        <description>Confirmed Geolocation point of Lead&apos;s address</description>
        <label>Confirmed Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Credit_Approved__c</fullName>
        <label>Credit_Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_Lead_Status_At_Opt_Out__c</fullName>
        <label>D2D Lead Status At Opt Out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D2D_Lead_Status__c</fullName>
        <label>D2D Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Opt-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Opt-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Utility Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Visit 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Visit 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photos Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Scheduled</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D2D Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D2D_Opt_Out_Detail__c</fullName>
        <label>D2D Opt Out Detail</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D2D_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D2D Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D2D_Scheduled_Visit_Datetime__c</fullName>
        <label>D2D Scheduled Visit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>D2D_Site_Quality__c</fullName>
        <label>D2D Site Quality</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>1050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1600</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_System_Size__c</fullName>
        <label>D2D System Size</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>16 Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Panel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_Visit_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D2D Visit Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EP_Second_Lead_Source__c</fullName>
        <description>Employee Portal Second Lead Source</description>
        <label>EP Second Lead Source</label>
        <picklist>
            <controllingField>Lead_Source__c</controllingField>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postcard/Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Personal Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvassing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of referral</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Visit_Datetime__c</fullName>
        <label>First Visit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Visit_Notes__c</fullName>
        <label>First Visit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Last_Name__c  &amp; &apos;, &apos; &amp; First_Name__c</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Landing Page Template where referral came from</inlineHelpText>
        <label>Landing Page Template</label>
        <referenceTo>Partner_Page_Template__c</referenceTo>
        <relationshipLabel>Portal Referrals</relationshipLabel>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of referral</description>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change_Date__c</fullName>
        <label>Last Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <inlineHelpText>value from Lead.LeadSource</inlineHelpText>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Canvassing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Personal Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Portal Referrals</relationshipLabel>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <formula>TEXT(Lead__r.Method_of_Contact__c)</formula>
        <label>Method of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Portal Referrals</relationshipLabel>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Notes__c</fullName>
        <label>Opt_Out_Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portal_Hear_About_Us__c</fullName>
        <description>Employee Landing  Page Hear About Us</description>
        <label>Portal Hear About Us</label>
        <picklist>
            <picklistValues>
                <fullName>News Article/Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Energy Solar Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral by Customer/Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral by Direct Energy Solar Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postcard/Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Payment_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Portal Payment Plan</label>
        <referenceTo>Portal_Payment_Plan__c</referenceTo>
        <relationshipLabel>Portal Referrals</relationshipLabel>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Referral_Fee__c</fullName>
        <inlineHelpText>Amount earned for this referral (per referral basis)</inlineHelpText>
        <label>Portal Referral Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QAS_Addresss_Validation_Timestamp__c</fullName>
        <label>QAS Addresss Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QAS_County__c</fullName>
        <label>QAS County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Latitude__c</fullName>
        <label>QAS Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Longitude__c</fullName>
        <label>QAS Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Validation_Status__c</fullName>
        <label>QAS Validation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Earnings__c</fullName>
        <formula>Portal_Referral_Fee__c +  Sold_Referral_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total of all referral fees for this referral</inlineHelpText>
        <label>Referral Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_by_Text__c</fullName>
        <description>Name of contact for display in the portal</description>
        <formula>Referred_by__r.LastName + &apos;, &apos; + Referred_by__r.FirstName</formula>
        <label>Referred by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Portal Referrals</relationshipLabel>
        <relationshipName>Portal_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSG_Accepted__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <label>SSG_Accepted</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Visit_Datetime__c</fullName>
        <label>Second Visit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_Visit_Notes__c</fullName>
        <label>Second Visit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Priority__c</fullName>
        <label>Segment Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Self_Generated__c</fullName>
        <formula>IF(Lead__r.Self_Generated__c, &apos;Yes&apos;, null)</formula>
        <label>Self Generated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Referral_Fee__c</fullName>
        <description>Fee paid from a sold referral</description>
        <label>Sold Referral Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OPEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QUALIFIED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street of Referral</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Visit_Datetime__c</fullName>
        <label>Third Visit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Third_Visit_Notes__c</fullName>
        <label>Third Visit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Walk_Sequence__c</fullName>
        <label>Walk Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Portal Referral</label>
    <listViews>
        <fullName>Active_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Detail__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Duplicate</value>
        </filters>
        <label>Active Referrals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Duplicates</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Lead_Created_Date__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Account__c</columns>
        <columns>Self_Generated__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Duplicate</value>
        </filters>
        <label>Duplicates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REF-{000000}</displayFormat>
        <label>Portal Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>